--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body background="assets/images/heroes2.jpg">
 
     <div class="container">
-        <div class="row">
+        <div class="row" id="top-container">
             <div class="col-md-6">
-                <h1>Super Hero Gif search</h1>
+                <h1>Super Hero Gif Search</h1>
                 <div id="heroButtons"></div>
             </div>
             <div class="col-md-6">
                 <form id="hero-form">
-                    <label for="hero-input">Add a Super Hero</label>
+                    <!-- <label for="hero-input">Add a Super Hero</label> -->
                     <input type="text" id="hero-input">
                     <br>
 
                     <!-- Button triggers new hero to be added -->
-                    <input id="add-hero" type="submit" value="Add a Super Hero">
+                    <input class="btn btn-primary btn-lg" id="add-hero" type="submit" value="↑ Add a Super Hero ↑">
                 </form>
             </div>
         </div>
